--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 05:19</p>
+ <p>最終更新日：2025/04/14 05:41</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
@@ -417,11 +417,12 @@ function renderVideoList(videos) {
     const item = document.createElement('div');
     item.className = 'p-3 mb-3 bg-blue-100 rounded-lg shadow-md border-2 border-teal-700 space-y-1';
 
-    const key = `${video["videoId"]}__${video["start"] || 0}`;
+    const key = `${video["videoId"]}__${parseInt(video["start"] || 0)}`;
     if (key === nowPlayingKey) {
-    item.classList.add('playing');
-    playingElement = item;
+      item.classList.add('playing');
+      playingElement = item;
     }
+
     
     // 1行目：タイトル / アーティスト
     const topRow = document.createElement('div');
@@ -514,7 +515,7 @@ function loadVideo(video, item) {
   // 再生中の曲名を更新
   const nowPlayingTitle = document.getElementById('nowPlayingTitle');
   nowPlayingTitle.textContent = video["title"] + " - " + video["artist"];
-  nowPlayingKey = `${video["videoId"]}__${video["start"] || 0}`;
+  nowPlayingKey = `${video["videoId"]}__${start}`;
   applyFilters(); // ← 再描画してハイライト＆スクロール反映
 
   // プレイヤーを表示する位置を調整
