--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ section {
   </style>
 </head>
 <body class="bg-white text-gray-800">
-  <header class="border-b sticky top-0 z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
+  <header class="border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
     <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">しがりこのうた。</h1>
   </header>
 
