--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ header {
 /* フィルターボタンを固定 */
 section {
   position: sticky;
-  top: 60px; /* ヘッダーの高さ分、フィルター部分がヘッダーの下に配置されるように */
+  top: 0px; 
   z-index: 9;  /* ヘッダーより下に配置 */
   background-color: white;
   padding-top: 5px;
