--- a/index.html
+++ b/index.html
@@ -126,11 +126,9 @@ section {
     bottom: 10px;  /* プレイヤーの高さ + 余白分だけ上に配置 */
   }
 
-/* 再生中の曲名表示部分 */
-#nowPlaying {
-  position: fixed;
-  left: 0;
-  z-index: 9;  /* プレイヤーより一段下 */
+#nowPlayingWrapper {
+  background-color: #e0f2fe; /* ちょい青系 */
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
 }
 
 #videoList .playing {
@@ -232,15 +230,15 @@ section {
  <p>最終更新日：2025/04/14 05:43</p>
 </footer>
  
-  <!-- 再生中の曲名表示部分 -->
-<div id="nowPlaying" class="fixed bottom-0 left-0 w-full bg-blue-100 text-blue-900 py-2 text-center font-medium z-30">
-  <span id="nowPlayingTitle">再生中の曲名</span>
-</div>
-
- <!-- 前へ／次へボタン -->
-<div id="playerControls" class="flex justify-center gap-2 mt-2 mb-16">
-  <button id="prevVideoBtn" class="bg-gray-300 px-3 py-1 rounded">◀ 戻る</button>
-  <button id="nextVideoBtn" class="bg-gray-300 px-3 py-1 rounded">▶ 次へ</button>
+<!-- 再生中の曲名とボタンを一つの箱に入れる -->
+<div id="nowPlayingWrapper" class="fixed bottom-0 left-0 w-full bg-blue-100 text-blue-900 z-30">
+  <div id="nowPlaying" class="py-2 text-center font-medium">
+    <span id="nowPlayingTitle">再生中の曲名</span>
+  </div>
+  <div id="playerControls" class="flex justify-center gap-2 py-2">
+    <button id="prevVideoBtn" class="bg-gray-300 px-3 py-1 rounded">◀ 戻る</button>
+    <button id="nextVideoBtn" class="bg-gray-300 px-3 py-1 rounded">▶ 次へ</button>
+  </div>
 </div>
 
 <!-- 固定プレイヤー -->
