--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@ section {
     bottom: 10px;  /* プレイヤーの高さ + 余白分だけ上に配置 */
   }
 
+    #fixedPlayer .controls-wrapper {
+  padding-bottom: 8px; /* ← 必要に応じて増やして調整 */
+}
+
+
 #nowPlayingWrapper {
   background-color: #e0f2fe; /* ちょい青系 */
   box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
