--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ function renderVideoList(videos) {
     metaRow.className = 'video-meta';
     [
       video["カテゴリ"],
-      video["公開日"],
+      video["公開月"],
       video["動画種別"],
       video["担当区分"]
     ].forEach(text => {
