--- a/index.html
+++ b/index.html
@@ -184,10 +184,12 @@ section {
       </select>
       <input id="searchInput" type="text" placeholder="曲名・アーティスト" 
         class="hidden sm:block col-span-1 sm:col-span-2 rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
-      <select id="sortOrder" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
-        <option value="desc">新しい順</option>
-        <option value="asc">古い順</option>
-      </select>
+<select id="sortOrder" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+  <option value="desc">新しい順</option>
+  <option value="asc">古い順</option>
+  <option value="artist">曲名順</option>
+  <option value="title">アーティスト順</option>
+</select>
       <button id="resetFilters" class="hidden sm:block bg-blue-100 hover:bg-blue-200 text-blue-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">リセット</button>
           <!-- ランダム再生ボタン -->
     <button id="randomPlayButton" class="hidden sm:block bg-green-100 hover:bg-green-200 text-green-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300 mt-4 w-full sm:w-auto">
@@ -417,12 +419,17 @@ if (mobileRandomPlayButton) {
                   video["artist"].toLowerCase().includes(searchInput.value.toLowerCase()));
         });
 
-        filtered.sort((a, b) => {
-          const dateA = new Date(a["公開日"]);
-          const dateB = new Date(b["公開日"]);
-          return sortOrder.value === "asc" ? dateA - dateB : dateB - dateA;
-        });
-
+  filtered.sort((a, b) => {
+  if (sortOrder.value === "asc" || sortOrder.value === "desc") {
+    const dateA = new Date(a["公開日"]);
+    const dateB = new Date(b["公開日"]);
+    return sortOrder.value === "asc" ? dateA - dateB : dateB - dateA;
+  } else if (sortOrder.value === "title") {
+    return a["title"].localeCompare(b["title"], 'ja');
+  } else if (sortOrder.value === "artist") {
+    return a["artist"].localeCompare(b["artist"], 'ja');
+  }
+});
         renderVideoList(filtered);
         currentFilteredVideos = filtered;
       }
