--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ section {
 <select id="sortOrder" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
   <option value="desc">新しい順</option>
   <option value="asc">古い順</option>
-  <option value="artist">曲名順</option>
-  <option value="title">アーティスト順</option>
+  <option value="title">曲名順</option>
+  <option value="artist">アーティスト順</option>
 </select>
       <button id="resetFilters" class="hidden sm:block bg-blue-100 hover:bg-blue-200 text-blue-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">リセット</button>
           <!-- ランダム再生ボタン -->
