--- a/index.html
+++ b/index.html
@@ -232,11 +232,21 @@ section {
 </div>
 
 
-  <footer class="text-center text-xs text-gray-500 mt-12 px-4 pb-32 space-y-2">
+  <footer class="text-center text-xs text-gray-500 mt-12 px-4 pb-64 space-y-2">
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 05:43</p>
+    
+ <p class="mt-6">制作にあたり、以下のサイトを参考にさせていただきました（敬称略・順不同）：</p>
+<ul class="list-disc list-inside text-left mx-auto max-w-md text-gray-500">
+  <li><a href="https://chimauta.pages.dev/" class="underline" target="_blank">ちまうた｜町田ちま非公式ファンサイト</a></li>
+  <li><a href="https://uta.inui-dondon-sukininaru.net/" class="underline" target="_blank">いぬいのうた | 戌亥とこ非公式ファンサイト</a></li>
+</ul>
+
+<p class="mt-6">歌枠のタイムスタンプや曲情報をコメントで教えてくださった皆さまにも感謝しています。<br>
+おかげさまで、より正確で豊かなアーカイブにすることができました。</p>
+
+ <p>最終更新日：2025/07/18</p>
 </footer>
  
 <!-- 再生中の曲名とボタンを一つの箱に入れる -->
