--- a/index.html
+++ b/index.html
@@ -147,9 +147,17 @@ section {
   </style>
 </head>
 <body class="bg-white text-gray-800">
-  <header class="border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
-    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">しがりこのうた。</h1>
-  </header>
+  <header class="relative border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
+    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
+    しがりこのうた。
+  </h1>
+
+      <div class="absolute right-4 top-1/2 -translate-y-1/2 flex space-x-3 text-sm text-blue-700">
+    <a href="https://www.youtube.com/@ShigaRiko" target="_blank" class="hover:underline">YouTube</a>
+    <a href="https://www.tiktok.com/@riko14218" target="_blank" class="hover:underline">TikTok</a>
+    <a href="https://x.com/Shigariko_" target="_blank" class="hover:underline">X</a>
+  </div>
+</header>
 
   <div class="max-w-4xl mx-auto px-4 mt-4 text-center text-sm text-gray-600">
   にじさんじ所属 司賀りこさんの歌ってみたや歌枠などをまとめた非公式ファンアーカイブです。<br>
