--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ section {
 
   </style>
 </head>
-<body class="bg-white text-gray-800">
+<body style="background-color: #FFE36C;" class="text-gray-800">
   <header class="relative border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
     <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
     しがりこのうた。
