--- a/index.html
+++ b/index.html
@@ -148,12 +148,17 @@ section {
 </head>
 <body style="background-color: #FFE36C;" class="text-gray-800">
   <header class="border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
-  <div class="flex flex-col sm:flex-row items-center justify-between">
-    <h1 class="w-full text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
-  しがりこのうた。
-</h1>
+  <div class="flex items-center justify-between">
+    <!-- 左に空白のdivでスペース確保 -->
+    <div class="w-24 hidden sm:block"></div>
 
-    <div class="mt-2 sm:mt-0 flex space-x-3 text-sm text-blue-700">
+    <!-- 中央タイトル -->
+    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
+      しがりこのうた。
+    </h1>
+
+    <!-- 右側SNSリンク -->
+    <div class="flex space-x-3 text-sm text-blue-700">
       <a href="https://www.youtube.com/@ShigaRiko" target="_blank" class="hover:underline">YouTube</a>
       <a href="https://www.tiktok.com/@riko14218" target="_blank" class="hover:underline">TikTok</a>
       <a href="https://x.com/Shigariko_" target="_blank" class="hover:underline">X</a>
