--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ section {
         <select id="modalSortOrder" class="w-full border p-2 rounded">
     <option value="desc">新しい順</option>
     <option value="asc">古い順</option>
-    <option value="artist">曲名順</option>
-    <option value="title">アーティスト順</option>
+    <option value="title">曲名順</option>
+    <option value="artist">アーティスト順</option>
   </select>
       <select id="modalCategoryFilter" class="w-full border p-2 rounded">
         <option value="">カテゴリ</option>
