--- a/index.html
+++ b/index.html
@@ -159,11 +159,18 @@ section {
     </h1>
 
     <!-- 右側SNSリンク -->
-    <div class="flex space-x-3 text-sm text-blue-700">
-      <a href="https://www.youtube.com/@ShigaRiko" target="_blank" class="hover:underline">YouTube</a>
-      <a href="https://www.tiktok.com/@riko14218" target="_blank" class="hover:underline">TikTok</a>
-      <a href="https://x.com/Shigariko_" target="_blank" class="hover:underline">X</a>
-    </div>
+    <div class="absolute right-4 top-1/2 -translate-y-1/2 flex space-x-4 items-center">
+  <a href="https://www.youtube.com/@ShigaRiko" target="_blank" aria-label="YouTube">
+    <img src="./YT_icon.svg" alt="YouTube" class="w-6 h-6">
+  </a>
+  <a href="https://www.tiktok.com/@riko14218" target="_blank" aria-label="TikTok">
+    <img src="./TT_icon.svg" alt="TikTok" class="w-6 h-6">
+  </a>
+  <a href="https://x.com/Shigariko_" target="_blank" aria-label="X">
+    <img src="./X_icon.svg" alt="X" class="w-6 h-6">
+  </a>
+</div>
+
   </div>
 </header>
 
