タイトル調整

--- a/index.html
+++ b/index.html
@@ -148,29 +148,21 @@ section {
   </style>
 </head>
 <body style="background-color: #FFE36C;" class="text-gray-800">
-  <header class="border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
-  <div class="flex items-center justify-between">
-    <!-- 左に空白のdivでスペース確保 -->
-    <div class="w-24 hidden sm:block"></div>
+  <header class="relative border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
+  <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
+    しがりこのうた。
+  </h1>
 
-    <!-- 中央タイトル -->
-    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
-      しがりこのうた。
-    </h1>
-
-    <!-- 右側SNSリンク -->
-    <div class="absolute right-4 top-1/2 -translate-y-1/2 flex space-x-4 items-center">
-  <a href="https://www.youtube.com/@ShigaRiko" target="_blank" aria-label="YouTube">
-    <img src="./YT_icon.svg" alt="YouTube" class="w-6 h-6">
-  </a>
-  <a href="https://www.tiktok.com/@riko14218" target="_blank" aria-label="TikTok">
-    <img src="./TT_icon.svg" alt="TikTok" class="w-6 h-6">
-  </a>
-  <a href="https://x.com/Shigariko_" target="_blank" aria-label="X">
-    <img src="./X_icon.svg" alt="X" class="w-6 h-6">
-  </a>
-</div>
-
+  <div class="absolute right-4 top-1/2 -translate-y-1/2 flex space-x-4 items-center">
+    <a href="https://www.youtube.com/@ShigaRiko" target="_blank" aria-label="YouTube">
+      <img src="./YT_icon.svg" alt="YouTube" class="w-8 h-8" />
+    </a>
+    <a href="https://www.tiktok.com/@riko14218" target="_blank" aria-label="TikTok">
+      <img src="./TT_icon.svg" alt="TikTok" class="w-8 h-8" />
+    </a>
+    <a href="https://x.com/Shigariko_" target="_blank" aria-label="X">
+      <img src="./X_icon.svg" alt="X" class="w-8 h-8" />
+    </a>
   </div>
 </header>
 
