フィルターUI余白調整

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ section {
   top: 0px; 
   z-index: 20;  /* ヘッダーより下に配置 */
   background-color: white;
-  padding-top: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
       /* 固定プレイヤー用のCSS */
