--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@ section {
 </select>
       <button id="resetFilters" class="hidden sm:block bg-blue-100 hover:bg-blue-200 text-blue-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">リセット</button>
           <!-- ランダム再生ボタン -->
-    <button id="randomPlayButton" class="hidden sm:block bg-green-100 hover:bg-green-200 text-green-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300 mt-4 w-full sm:w-auto">
-      ランダム再生
-    </button>
+<button id="randomPlayButton" class="hidden sm:block bg-green-100 hover:bg-green-200 text-green-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">
+  ランダム再生
+</button>
     </div>
   </section>
 
