--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ sortOrder.value = document.getElementById('modalSortOrder').value;
           sets.role.add(v["担当区分"]);
 
             // 公開月（例: 2023/07）だけ抽出して追加
-  const rawDate = v["公開日"];
+  const rawDate = v["公開月"];
   if (rawDate && /^\d{4}[-\/]\d{2}/.test(rawDate)) {
     const month = rawDate.slice(0, 7).replace('-', '/'); // "YYYY/MM"
     sets.date.add(month);
