プラットフォーム記載

--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@ function renderVideoList(videos) {
       video["公開月"],
       video["動画種別"],
       video["担当区分"]
+      video["platform"]
     ].forEach(text => {
       const span = document.createElement('span');
       span.textContent = text;
