--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ section {
 <body style="background-color: #FFE36C;" class="text-gray-800">
   <header class="relative border-b z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
   <h1 class="text-left text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">
-  しがりこのうた。
+  しがりこのうた。<br class="sm:hidden"><span class="text-sm sm:text-base">｜司賀りこ非公式ファンサイト
 </h1>
 
   <div class="absolute right-4 top-1/2 -translate-y-1/2 flex space-x-4 items-center">
