--- a/index.html
+++ b/index.html
@@ -270,10 +270,9 @@ section {
   <li><a href="https://uta.inui-dondon-sukininaru.net/" class="underline" target="_blank">いぬいのうた | 戌亥とこ非公式ファンサイト</a></li>
 </ul>
 
-<p class="mt-6">歌枠のタイムスタンプや曲情報をコメントで教えてくださった皆さまにも感謝しています。<br>
-おかげさまで、より正確で豊かなアーカイブにすることができました。</p>
+<p class="mt-6">歌枠のタイムスタンプや曲情報をコメントで掲載してくれている皆さまに感謝。</p>
 
- <p>最終更新日：2025/07/28</p>
+ <p>最終更新日：2025/08/2</p>
 </footer>
  
 <!-- 再生中の曲名とボタンを一つの箱に入れる -->
